@@ -16,6 +16,7 @@
         <![CDATA[
         <p>From 4.8 to 4.9:<br/>
             [BEAM-1288] Add plausibility check for reprojection and orthorectification<br/>
+            [BEAM-1284] Reprojection should preserve log-scaling of bands<br/>
             [BEAM-1278] GPF shall generate reports about tile computations<br/>
             [BEAM-1263] All processors shall provide help and "about" information<br/>
             [BEAM-1234] The target product of some operators shall not be written<br/>
